# RAG-Learning

./: .env  README.md  chat_bot.py  main.py  pyproject.toml  water_consumption_calculator.py
model/: train_response.py
